finishing first version

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 							<div class="banner_content">
 								<h2>SpeechBrain <br /></h2>
                 <p>A Pytorch Powered Speech Toolkit</p>
-								<a class="banner_btn" href="#">Get Started</a>
-								<a class="banner_btn2" href="#">Download</a>
+								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
+								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 							</div>
 						</div>
 						<div class="col-lg-5">
@@ -90,49 +90,56 @@
         			<div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-mic"></i>
-        					<a href="#"><h4>DNN-HMM ASR</h4></a>
-        					<p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
-        				</div>
-        			</div>
-        			<div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-mic"></i>
         					<a href="#"><h4>E2E ASR</h4></a>
-                  <p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
+                  <p> End-to-End Speech Recognition relies massively on deep neural networks.
+                    Hence, SpeechBrain is a perfect fit and we provide various state-of-the-art methods including
+                     CTC, CTC+Attention sequence to sequence models, transformers, transducers, recurrent and transformer-based language models.</p>
         				</div>
         			</div>
         			<div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-user"></i>
         					<a href="#"><h4>Speaker Recognition</h4></a>
-                  <p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
+                  <p>X-vectors have been game changing in the area of speaker recognition, diarization and identification.
+                    SpeechBrain provides different customizable models to approach these tasks : ECAPA-TDNN, Kaldi-like X-vectors, spectral clustering,
+                    LDA, PLDA, constrative learning.
+                   </p>
         				</div>
         			</div>
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-magic-wand"></i>
         					<a href="#"><h4>Speech Enhancement</h4></a>
-                  <p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
+                  <p>Enhancing the quality of a speech signal is of crucial interest for many realistic tasks.
+                    Spectral masking, spectral mapping, and time-domain enhancement are different methods already available within SpeechBrain.</p>
         				</div>
         			</div>
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-mic"></i>
-        					<a href="#"><h4>Multichannel Speech Processing</h4></a>
-                  <p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
+        					<a href="#"><h4>Speech Processing</h4></a>
+                  <p>Good signal processing methods are often required to approach challenging tasks.
+                    SpeechBrain provides an handy framework to combine such methods with deep learning to quickly measure their performance. Various complex methods
+                    are already implemented including delay-and-sum, MVDR and GeV beamforming, SpecAugment and TimeAugment.
+                  </p>
         				</div>
         			</div>
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-smile"></i>
         					<a href="#"><h4>Freedom of Research</h4></a>
-                  <p>Insert your Blabla, cause hey SpeechBrain is crazy but you believe that your part is better that all the others. Actually, SpeechBrain is cool only because you did this part.
-                  More precisely, you think your stuff is the coolest thing ever. You don't even need stunning visuals.</p>
+                  <p>Most importantly, SpeechBrain has been conceived with research and productivity in mind. Therefore,
+                    every single piece of our pipelines, models and recipes can easily be modified enabling users to develop new models.
+                    Programming will never be the bottleneck anymore!</p>
+        				</div>
+        			</div>
+              <div class="col-lg-4">
+        				<div class="work_item">
+        					<i class="lnr lnr-mic"></i>
+        					<a href="#"><h4>DNN-HMM ASR</h4></a>
+        					<p>Speech Recognition with Hidden Markov Models remain an extremely good solution for many ASR scenario.
+                  While SpeechBrain proposes basic tools such as n-gram language models or DNN training, the complete integration of a DNN-HMM pipeline
+                  is on our short-term to do list.</p>
         				</div>
         			</div>
         		</div>
@@ -167,7 +174,7 @@
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
 										<h6>SpeechBrain allows users to install either via PyPI to rapidly use the standard library and a local install to further expand the features of the toolkit.</h6>
-										<a class="main_btn" href="#">Get Started Now</a>
+										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -194,7 +201,7 @@
                     all experiments are defined with two different files. First, a python script that defines
                     precisely your recipe, and a yaml configuration file that describes all the parameters
                     and functionalities used within your recipe.</h6>
-										<a class="main_btn" href="#">Get Started Now</a>
+										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -222,7 +229,7 @@
                       deep learning models, losses, training / evaluation loops, input pipeline / transformations and use
                       them handily without overhead.
                       </h6>
-  										<a class="main_btn" href="#">Get Started Now</a>
+  										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
   									</div>
   								</div>
   								<div class="col-lg-6">
@@ -395,7 +402,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					<div class="f_title">
         						<h3>Get Involved</h3>
         					</div>
-        					<p>Feel free to contact us at: speechbrainproject@gmail.com</p>
+        					<p>Thanks to our sponsors, we often recruit talented candidates to advance the state-of-the-art within SpeechBrain.
+                    Feel free to contact us at: speechbrainproject@gmail.com</p>
         				</aside>
         			</div>
         			<div class="col-lg-2">
