--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -99,7 +99,7 @@
                                         <div class="blog_details">
                                             <h2>The Brain Class</h2>
                                             <p>One key component of deep learning is iterating the dataset multiple times and performing parameter updates. This process is sometimes called the "training loop" and there are usually many stages to this loop. SpeechBrain provides a convenient framework for organizing the training loop, in the form of a class known as the "Brain" class, implemented in speechbrain/core.py. In each recipe, we sub-class this class and override the methods for which the default implementation doesn't do what is required for that particular recipe.</p>
-                                            <a href="https://colab.research.google.com/drive/1cYIsQiKlXTyfGR3j4gKs5Rq648JDaqaB?usp=sharing#scrollTo=jr2jH1sDZcml" class="blog_btn">Open in Google Colab</a>
+                                            <a href="" class="blog_btn">Open in Google Colab</a>
                                         </div>
                                     </div>
                                 </div>
