--- a/index.html
+++ b/index.html
@@ -120,8 +120,17 @@
         					<a href="#"><h4>Speech Processing</h4></a>
                   <p>Good signal processing methods are often required to approach challenging tasks.
                     SpeechBrain provides an handy framework to combine such methods with deep learning to quickly measure their performance. Various complex methods
-                    are already implemented including delay-and-sum, MVDR and GeV beamforming, SpecAugment and TimeAugment.
+                    are already implemented including SpecAugment and TimeAugment, acoustic features extraction and normalization.
                   </p>
+        				</div>
+        			</div>
+              <div class="col-lg-4">
+        				<div class="work_item">
+        					<i class="lnr lnr-mic"></i>
+        					<a href="#"><h4>Multi Microphone Audio Processing</h4></a>
+        					<p>The ability to combine multiple signals to solve a task is crucial in realistic and adversarial acoustic environments.
+                   SpeechBrain provides various multi microphones techniques such as delay-and-sum, MVDR and GeV beamforming.
+                </p>
         				</div>
         			</div>
               <div class="col-lg-4">
@@ -131,15 +140,6 @@
                   <p>Most importantly, SpeechBrain has been conceived with research and productivity in mind. Therefore,
                     every single piece of our pipelines, models and recipes can easily be modified enabling users to develop new models.
                     Programming will never be the bottleneck anymore!</p>
-        				</div>
-        			</div>
-              <div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-mic"></i>
-        					<a href="#"><h4>DNN-HMM ASR</h4></a>
-        					<p>Speech Recognition with Hidden Markov Models remain an extremely good solution for many ASR scenario.
-                  While SpeechBrain proposes basic tools such as n-gram language models or DNN training, the complete integration of a DNN-HMM pipeline
-                  is on our short-term to do list.</p>
         				</div>
         			</div>
         		</div>
@@ -389,7 +389,7 @@ class ASR_Brain(sb.Brain):
         					<div class="f_title">
         						<h3>About Us</h3>
         					</div>
-        					<p style="text-align:justify">SpeechBrain isn't a company nor an association. It is an open source toolkit and a community directed by Dr. Ravanelli Mirco and co-directed by Dr. Parcollet Titouan. We aim at building a bridge between deep learning and speech technologies. </p>
+        					<p style="text-align:justify">SpeechBrain isn't a company nor an association. It is an open source toolkit and a community created by Dr. Ravanelli Mirco and co-created by Dr. Parcollet Titouan. We aim at building a bridge between deep learning and speech technologies. </p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
         				</aside>
@@ -397,7 +397,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         			<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget news_widget">
         					<div class="f_title">
-        						<h3>Get Involved</h3>
+        						<h3>Opportunities</h3>
         					</div>
         					<p>Thanks to our sponsors, we often recruit talented candidates to advance the state-of-the-art within SpeechBrain.
                     Feel free to contact us at: speechbrainproject@gmail.com</p>
@@ -410,8 +410,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					</div>
         					<p>Let us be social</p>
         					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        						<li><a href="https://twitter.com/SpeechBrain1"><i class="fa fa-twitter"></i></a></li>
         					</ul>
         				</aside>
         			</div>
