--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -64,7 +64,7 @@
 				<div class="container">
 					<div class="blog_b_text text-center">
 						<h2>SpeechBrain Tutorials</h2>
-						<h3>SpeechBrain Advanced</h3>
+						<h3>Speech Processing</h3>
 
 					</div>
 				</div>
@@ -84,7 +84,89 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
-
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Speech Augmentation</h2>
+                                            <p>A popular saying in machine learning is "there is no better data than more data". However, collecting new data can be expensive
+                                              and we must cleverly use the available dataset. One popular technique is called speech augmentation. The idea is to artificially
+                                              corrupt the original speech signals to give the network the "illusion" that we are processing a new signal. This acts as a powerful regularizer,
+                                              that normally helps neural networks improving generalization and thus achieve better performance on test data.</p>
+                                            <a href="https://colab.research.google.com/drive/16mUGH_A3UHZZOx2Vn69hy6fkPAM8CnA4?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Fourier Transform and Spectrograms</h2>
+                                            <p>In speech and audio processing, the signal in the time-domain is often transformed into another domain.
+                                              Ok, but why do we need to transform an audio signal? Some speech characteristics/patterns of the signal (e.g, pitch, formats)
+                                              might not be very evident when looking at the audio in the time-domain. With properly designed transformations,
+                                              it might be easier to extract the needed information from the signal itself. The most popular transformation is the
+                                              Fourier Transform, which turns the time-domain signal into an equivalent representation in the frequency domain.
+                                              In the following sections, we will describe the Fourier transforms along with other related transformations such as
+                                              Short-Term Fourier Transform (STFT) and spectrograms.</p>
+                                            <a href="https://colab.research.google.com/drive/1dCY2XHC6NiDA9mor3jd9H9w-XEcD3M4L?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Speech Features (MFCC, FBANK)</h2>
+                                            <p>Speech is a very high-dimensional signal. For instance, when the sampling frequency is 16 kHz,
+                                              we have 16000 samples for each second. Working with such very high dimensional data can be critical from a machine learning perspective.
+                                              The goal of feature extraction is to find more compact ways to represent speech.</p>
+                                            <a href="https://colab.research.google.com/drive/1iH1Tvgrsi7nD_uxh5jEj7DAXaL4gdjze?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
 
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
