--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -4,6 +4,9 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- BLOCK INDEX -->
+        <meta name="robots" content="noindex">
+        <!-- BLOCK INDEX -->
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>SpeechBrain</title>
         <!-- Bootstrap CSS -->
@@ -37,12 +40,13 @@
 							<ul class="nav navbar-nav menu_nav justify-content-center">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
-                <li class="nav-item"><a class="nav-link" href="https://nvidia.github.io/NeMo/index.html">Documentation</a>
+                <li class="nav-item"><a class="nav-link" href="documentation/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
 										<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -95,13 +99,17 @@
                                     </div>
                                </div>
                                 <div class="col-md-9">
-                                    <div class="blog_post">
-                                        <div class="blog_details">
-                                            <h2>The Brain Class</h2>
-                                            <p>One key component of deep learning is iterating the dataset multiple times and performing parameter updates. This process is sometimes called the "training loop" and there are usually many stages to this loop. SpeechBrain provides a convenient framework for organizing the training loop, in the form of a class known as the "Brain" class, implemented in speechbrain/core.py. In each recipe, we sub-class this class and override the methods for which the default implementation doesn't do what is required for that particular recipe.</p>
-                                            <a href="" class="blog_btn">Open in Google Colab</a>
-                                        </div>
-                                    </div>
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>The Brain Class</h2>
+                                          <p>One key component of deep learning is iterating the dataset multiple times and performing parameter updates.
+                                            This process is sometimes called the "training loop" and there are usually many stages to this loop.
+                                            SpeechBrain provides a convenient framework for organizing the training loop, in the form of a class known as the "Brain" class,
+                                            implemented in speechbrain/core.py. In each recipe, we sub-class this class and override the methods for which the default
+                                            implementation doesn't do what is required for that particular recipe.</p>
+                                          <a href="https://colab.research.google.com/drive/1cYIsQiKlXTyfGR3j4gKs5Rq648JDaqaB?usp=sharing#scrollTo=jr2jH1sDZcml" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
                                 </div>
                             </article>
                             <article class="row blog_item">
@@ -114,18 +122,25 @@
                                             <li><a href="about.html">Plantiga P.<i class="lnr lnr-user"></i></a></li>
                                             <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                             <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
-                                            <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                            <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
                                         </ul>
                                     </div>
                                </div>
                                 <div class="col-md-9">
-                                    <div class="blog_post">
-                                        <div class="blog_details">
-                                            <h2>The Brain Class</h2>
-                                            <p>One key component of deep learning is iterating the dataset multiple times and performing parameter updates. This process is sometimes called the "training loop" and there are usually many stages to this loop. SpeechBrain provides a convenient framework for organizing the training loop, in the form of a class known as the "Brain" class, implemented in speechbrain/core.py. In each recipe, we sub-class this class and override the methods for which the default implementation doesn't do what is required for that particular recipe.</p>
-                                            <a href="https://colab.research.google.com/drive/1cYIsQiKlXTyfGR3j4gKs5Rq648JDaqaB?usp=sharing#scrollTo=jr2jH1sDZcml" class="blog_btn">Open in Google Colab</a>
-                                        </div>
-                                    </div>
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>HyperPyYAML</h2>
+                                          <p>An essential part of any deep learning pipeline is the definition of hyperparameters and other metadata.
+                                            These data in conjunction with the deep learning algorithms control the various aspects of the pipeline,
+                                            such as model architecture, training, and decoding. At SpeechBrain, we decided that the distinction between
+                                            hyperparameters and learning algorithms ought to be evident in the structure of our toolkit, so we split our
+                                            recipes into two primary files: experiment.py and hyperparams.yaml. The hyperparams.yaml file is in a
+                                            SpeechBrain-developed format, which we call "HyperPyYAML". We chose to extend YAML since it is a highly
+                                            readable format for data serialization. By extending an already useful format, we were able to create an
+                                            expanded definition of hyperparameter, keeping our actual experimental code small and highly readable.</p>
+                                          <a href="https://colab.research.google.com/drive/10jZah2QHZ7xuajv9M1yIwRQdePxPV97U" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
                                 </div>
                             </article>
 
