--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -91,7 +91,7 @@
                                             <a class="active" href="#">SpeechBrain Basics</a>
                                         </div>
                                         <ul class="blog_meta list">
-                                            <li><a href="about.html">Plantiga P.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="about.html">Plantinga P.<i class="lnr lnr-user"></i></a></li>
                                             <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                             <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
                                             <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
@@ -101,7 +101,7 @@
                                 <div class="col-md-9">
                                   <div class="blog_post">
                                       <div class="blog_details">
-                                          <h2>The Brain Class</h2>
+                                          <h2>Brain Class</h2>
                                           <p>One key component of deep learning is iterating the dataset multiple times and performing parameter updates.
                                             This process is sometimes called the "training loop" and there are usually many stages to this loop.
                                             SpeechBrain provides a convenient framework for organizing the training loop, in the form of a class known as the "Brain" class,
@@ -119,7 +119,7 @@
                                             <a class="active" href="#">SpeechBrain Basics</a>
                                         </div>
                                         <ul class="blog_meta list">
-                                            <li><a href="about.html">Plantiga P.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="about.html">Plantinga P.<i class="lnr lnr-user"></i></a></li>
                                             <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                             <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
                                             <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
@@ -139,6 +139,33 @@
                                             readable format for data serialization. By extending an already useful format, we were able to create an
                                             expanded definition of hyperparameter, keeping our actual experimental code small and highly readable.</p>
                                           <a href="https://colab.research.google.com/drive/10jZah2QHZ7xuajv9M1yIwRQdePxPV97U" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">SpeechBrain Basics</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Cornell S. & Rouhe A.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Data Loading Pipeline</h2>
+                                          <p>Setting up an efficient data loading pipeline is often a tedious task which involves creating the examples,
+                                            defining your torch.utils.data.Dataset class as well as different data sampling and augmentations strategies.
+                                            In SpeechBrain we provide efficient abstractions to simplify this time-consuming process without sacrificing
+                                            flexibility. In fact our data pipeline is built around the Pytorch one.</p>
+                                          <a href="https://colab.research.google.com/drive/1NEboTfb2EIBrc0nUd9NKwcG2eqf-kv3d?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                       </div>
                                   </div>
                                 </div>
